--- a/help.html
+++ b/help.html
@@ -734,11 +734,11 @@ function getPosition(el) {
 <br><br>
 <br><a name="cry" id="cry"></a>
 <img src="https://i.imgur.com/Whw2SOT.png"> <font color="#b29372" style="font-size:9px">what to do after a really long cry :</font><br><br>
-・ take a shower and change all of your clothes even your socks and underwear. this is the first step to everything<br>
-・ pour yourself a big, cold glass of water and drink it. all of it. once you're done, get yourself a refill. this will boost you physically and emotionally instantly please trust me<br>
-・ grab a snack, something light that you don't have to wait to prepare. i recommend a pudding cup, a piece of fruit, yogurt, a popsicle, or some crackers<br>
-・ get under the covers. turn on something - tv, a movie, music, anything distracting. or consider calling a friend or talking to anyone nearby, even your sibling the next room over !!<br>
-・ you're probably feeling all kinds of exhausted and drained and i don't want that for you in the slightest: know that you are loved. you are important. you mean more than you know right now, more than you will maybe ever know. you are worth all the stars in the sky. you deserve to feel good<br>
+・ take a shower and change all of your clothes even your socks and underwear. this is the first step to everything.<br>
+・ pour yourself a big, cold glass of water and drink it. all of it. once you're done, get yourself a refill. this will boost you physically and emotionally instantly please trust me !<br>
+・ grab a snack, something light that you don't have to wait to prepare. i recommend a piece of fruit, yogurt, a cup of tea, or some crackers.<br>
+・ get under the covers. turn on something - tv, a movie, music, anything distracting. consider calling a friend or a family member you trust !!<br>
+・ you're probably feeling all kinds of exhausted and drained and i don't want that for you in the slightest : know that you are loved. you are important. you mean more than you know right now, more than you will maybe ever know. you are worth all the stars in the sky. you deserve to feel good.<br>
 <br>
 <br><br>
 <br><a name="happen" id="happen"></a>
