--- a/portfolio.html
+++ b/portfolio.html
@@ -415,12 +415,12 @@ z-index: 3;
 <img src="https://i.imgur.com/Jm86w3I.png"/>
 
 <div onselectstart="return false" id="menu1">
-<p style="font-size:10px;line-height:50%;"><br><br>　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
+<p style="font-size:10px;line-height:50%;"><br>　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/links" style="text-decoration: none; color:#a3948d;">links</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
 </p>
-<br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
 　　　　　　<a href="/poofties" style="text-decoration: none; color:#8c7d75;">poofties</a>
 </div>
 
@@ -444,15 +444,13 @@ z-index: 3;
 <div style= "overflow: auto; overflow: scroll; padding-left: 10%; padding-right: 10%;">
 
 <style>
-#linkzinhoinho { color: #d6abab; }
-#linkzinhoinhoi { color: #bca9a9; }
-#meulinkzinhoinho { color: #e5b9b9; }
+#linkzinhoinho { color: #c7a5a5; }
 </style>
 <br>
-<center><img width="100px" height="auto" src="https://i.imgur.com/EUWeJOR.png"></center><br><br>
+<center><img width="100px" height="auto" src="https://i.imgur.com/9qg5UDg.png"></center><br>
 <center><font color="#bca9a9">melissa cavalcante assolari | august 11, 1997 <br>degree in game design | artist ♡ crafter ♡ designer </font></center>
 <center>
-<br><br><font color="#ad9783">( this is a compilation of the best of my works )</font><br><br><br><br><br>
+<br><br><font color="#9c8c7e">( <a id="linkbjinho" style="text-decoration: none;" href="https://middlepot.com/cv.pdf" target="_blank"><font color="#9c8c7e">middlepot's cv</font></a> )</font><br><br><br><br><br>
 
 <img src="https://i.imgur.com/NC62NZP.gif">
 
@@ -468,7 +466,7 @@ z-index: 3;
 
 
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> needle felt<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> needle felting<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 　　<img width="auto" height="250px" src="https://i.imgur.com/WOx9j1W.png">　
 <img width="auto" height="250px" src="https://i.imgur.com/HnO6VtX.png"><br><br>
 <img width="auto" height="150px" src="https://i.imgur.com/vlSTDfe.png">　
@@ -481,7 +479,7 @@ z-index: 3;
 
 
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> game design<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <a href="/milkywoods" target="_blank"><img src="https://i.imgur.com/bQqf98x.gif"/></a><br><br>
 <font style="font-size: 8px;" color="#b38d94">
 ( click to enter milky woods )
@@ -505,7 +503,7 @@ z-index: 3;
 
 
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> collage<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> collaging<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
 <img width="350px" height="auto" src="https://i.imgur.com/Gc9WlWB.png"><br><br>
 <img width="350px" height="auto" src="https://i.imgur.com/PPy4T0y.png"><br><br><br>
@@ -798,12 +796,11 @@ function resetPlayer() {
 
 
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> compositions<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/tiptoes.mp3" target="_blank" id="linkzinhoinho">tiptoes .mp3</a><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/forbidden.mp3" target="_blank" id="linkzinhoinho">forbidden .mp3</a><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/little%20girl.mp3" target="_blank" id="linkzinhoinho">little girl .mp3</a><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://file.pooftie.me/a/old%20stuffie.mp3" target="_blank" id="linkzinhoinho">old stuffie .mp3</a>
-<br><br><br><br>
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> compositing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br><br>
+<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/cisEw35.gif"></sub></sub>　<a href="https://file.pooftie.me/a/tiptoes.mp3" target="_blank" id="linkzinhoinho">tiptoes .mp3</a><br>
+<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/cisEw35.gif"></sub></sub>　<a href="https://file.pooftie.me/a/little%20girl.mp3" target="_blank" id="linkzinhoinho">little girl .mp3</a><br>
+<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/cisEw35.gif"></sub></sub>　<a href="https://file.pooftie.me/a/old%20stuffie.mp3" target="_blank" id="linkzinhoinho">old stuffie .mp3</a>
+<br><br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
