--- a/fashion.html
+++ b/fashion.html
@@ -595,69 +595,66 @@ p { margin: 0; }
 <font color="#bca6a0">( those photos are timeless )</font><br><br>
 <br><br>
 
-<img width="300px" height="auto" src="https://i.imgur.com/VqyaQRz.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/XibVxMw.jpg"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/H6pgpvh.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/B8so2rD.jpg"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/0nU5wdS.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/O0tSLZP.jpg"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/uClcEMW.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/MiaCpt9.png"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/5sdbi6P.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/ZPYsPKW.jpg"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/fnFGpCj.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/jPxxXZa.png"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/fnHgdI1.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/EuFL4U9.jpg"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/v85iR7v.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/KrVGk7H.png"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/ry1YBrt.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/TQZWEau.jpg"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/YoUTC3o.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/PaLG3Os.png"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/fztu9M8.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/zxZ3kbh.jpg"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/DlOtIv2.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/kt45Abs.png"/><br><br>
 <br>
 
-
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/BBUrEUU.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/5yvnlBA.png"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/TzCGuff.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/lwarkB9.png"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/8DDOBIY.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/Y5IXQCm.png"/><br><br>
 <br>
 
-<br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/iTc6XVD.png"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/tq6Y3Vl.png"/><br><br>
 <br>
+
+<img width="300px" height="auto" src="https://i.imgur.com/xMCVydX.png"/><br><br>
+<br>
+
+<img width="300px" height="auto" src="https://i.imgur.com/Ox3CQli.png"/><br><br>
+<br>
+
+<img width="300px" height="auto" src="https://i.imgur.com/QPf1WS9.png"/><br><br>
+<br>
+
+<img width="300px" height="auto" src="https://i.imgur.com/dR6jOtE.jpg"/><br><br>
+<br>
+
 
 <br><br>
 
