--- a/angel.html
+++ b/angel.html
@@ -447,7 +447,7 @@ z-index: 3;
   <source src="https://file.pooftie.me/a/memory.mp3" type="audio/mpeg">
 </audio>
 <div id="audioplayer">
-<button id="pButton" class="play"></button>　<sup><font style="text-shadow: 1px 1px #fff; color:#75462e;">memory * mine</font></sup>
+<button id="pButton" class="play"></button>　<sup><font style="text-shadow: 1px 1px #fff; color:#75462e;">memory .mp3</font></sup>
   <div id="timeline">    
       <div id="playhead"></div>
   </div>
