--- a/fluffy.html
+++ b/fluffy.html
@@ -445,7 +445,7 @@ z-index: 3;
   <source src="https://file.pooftie.me/a/pinky%20promise.mp3" type="audio/mpeg">
 </audio>
 <div id="audioplayer">
-<button id="pButton" class="play"></button>　<sup><font color="#968377">pinky promise * mine</font></sup>
+<button id="pButton" class="play"></button>　<sup><font color="#968377">pinky promise .mp3</font></sup>
   <div id="timeline">    
       <div id="playhead"></div>
   </div>
