--- a/pick.html
+++ b/pick.html
@@ -461,7 +461,7 @@ do you have<br>paws or toes ?<br>
   <source src="https://file.pooftie.me/a/boring%20day.mp3" type="audio/mpeg">
 </audio>
 <div id="audioplayer">
-<button id="pButton" class="play"></button>　<sup><font color="#968377">boring day * mine</font></sup>
+<button id="pButton" class="play"></button>　<sup><font color="#968377">boring day .mp3</font></sup>
   <div id="timeline">    
       <div id="playhead"></div>
   </div>
