--- a/lost.html
+++ b/lost.html
@@ -445,7 +445,7 @@ z-index: 3;
   <source src="https://file.pooftie.me/a/hesitation.mp3" type="audio/mpeg">
 </audio>
 <div id="audioplayer">
-<button id="pButton" class="play"></button>　<sup><font color="#968377">hesitation * mine</font></sup>
+<button id="pButton" class="play"></button>　<sup><font color="#968377">hesitation .mp3</font></sup>
   <div id="timeline">    
       <div id="playhead"></div>
   </div>
