--- a/credits.html
+++ b/credits.html
@@ -442,35 +442,16 @@ z-index: 3;
 
 <div style="position: absolute; left:10%; right:10%;">
 <font family = "Verdana"><font color="#ddb5b5"><font size="1">
-　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;please, read this first :<br><br></font>
+　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;please, read this :<br><br></font>
 <font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
-i seek transparency and respect the work of others on this site, so i value giving credit as something important. however, it is inevitably difficult to give credits appropriately and correctly when searching for content on sites like google, tumblr, pinterest, we heart it or even old web archived sites. to avoid crediting reposted content, i refuse to credit much of the content i use in my own work if i'm not sure the person owns the image / audio. unfortunately, fake sources are very common. i don't want to spread misinformation and lies, as this can cause even worse problems than just the absence of a source.<br>
+at the moment, when it comes to my projects, i am only making use of content that is either made entirely by me, highly edited by me ( using multiple references for achieving the final result ), that fit into public use or are copyright free ( such as the image of common objects, nature, food or clothing ). when it comes to content not made by me, i make sure to keep it as fair use & personal use only.<br>
+i seek transparency and respect the work of others on this site, so i value giving credit as something important. however, it is inevitably difficult to give credits appropriately and correctly when searching for content on sites like google, tumblr, pinterest, we heart it or even old web archived sites. to avoid crediting reposted content, i refuse to credit much of the content i use in my own work if i'm not sure the person owns the image / audio. unfortunately, fake sources are very common. i don't want to spread misinformation and lies, as this can cause even worse problems than just the absence of a source. nonetheless, i try to make sure i am making fair use of the content according to the intentions of each project i work on.<br>
 i am sorry if i offended someone by not giving credits, i am always willing to properly credit and even delete someone's content, if that person so wishes. please do not hesitate to contact me if you see something of yours being used and you are not satisfied with it.<br>
-a lot of the content i produce is made from scratch by me, but a lot of it is only edited or partially made by me. i try to be as clear as possible about it, but if you have any questions or think i'm not being clear enough, please contact me and i will try to explain exactly how was the process of finding the content, editing and so on ( even publicly, if you wish so )<br>
-it is difficult to be completely transparent about how much content is edited or not, especially without having the base content as a reference. content is often edited beforehand when reposted. i try my best not to cause problems for other artists, so again : i'm sorry !
+again : a lot of the content i produce is made from scratch by me, but a lot of it is only edited or partially made by me. i try to be as clear as possible about it, but if you have any questions or think i'm not being clear enough, please contact me and i will try to explain exactly how was the process of finding the content, editing and so on.<br>
+it is difficult to be completely transparent about how much content is edited or not, especially without having the base content as a reference. content is often edited beforehand when reposted. i try my best not to cause problems for other artists, so again : i'm sorry if anything !
 <br>
 </font></font></font></font>
 <br><br><br>
-<div style="line-height:15px">
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">　/ contact</font></font></font><br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　form base code by <i>jotform</i></font></font></font><br><br>
-
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">　/ help</font></font></font><br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　<i>music :</i> dreams * unknown</font></font></font><br><br>
-
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">　/ gaming</font></font></font><br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　graphics from <i>ragnarok online</i><br><br>
-
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">　/ poofties</font></font></font><br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　<i>music :</i> heartsng1 * unknown</font></font></font><br><br>
-
-<font family = "Verdana"><font color="#AD9F97"><font style="font-size:11px">　/ milky woods</font></font></font><br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　thank you <i>snut</i> and <i>fairyhalim</i> for inspiration !</font></font></font><br>
-<font family = "Verdana"><font color="#C6B5AA"><font style="font-size:9px">　　　<i>music :</i> ratinha branca * unknown</font></font></font><br><br>
-</div>
-<font family = "Verdana"><font color="#ccb6b6"><font style="font-size:9px">※ more credits can be found on the respective pages</font></font></font><br><br><br>
-<br><br>
-
 
 <font family = "Verdana"><font color="#ddb5b5"><font style="font-size:10px">　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;hosting sites that i currently use :</font></font></font><br><br>
 <font family = "Verdana"><font color="#AD9F97"><font style="font-size:9px">
@@ -489,10 +470,10 @@ it is difficult to be completely transparent about how much content is edited or
 <font family = "Verdana"><font color="#ddb5b5"><font size="1">
 　<sub><img height="16px" width="auto" src="https://i.imgur.com/yaDrGAm.png"></sub>&nbsp;&nbsp;important safety tips :<br><br></font>
 <font color="#B3A49A"><font style="font-size:9px"><font family = "Verdana">
-i'm sorry, i do bake some cookies in this website !<br>
+i do bake some cookies on this website !<br>
 this is because of the hosting sites and scripts. they are safe and i never had problems with them.. cookies are not always welcome, but i think it's inevitable in some cases.<br>
 that's okay if you don't want cookies, though ! you can always use the <i>anonymous mode</i> on your browser even on mobile, and you'll be simply free from all cookies. the <i>opera browser</i> is the best one for your privacy as it contains VPN itself.<br>
-if you don't like javascript or flash, you can disable it too in your browser settings, this website works 80% ok without these.<br>
+if you don't like javascript, you can disable it too in your browser settings, and this website will work 80% ok. basically, you won't be able to play games.<br>
 also, i sugest you to use an extension for encryption ( <i>https everywhere</i> is what i use ). i try to keep everything encrypted, but sometimes ssl certificates can expire and take a while to be renewed.. !<br>
 i always try to keep the visitors safe and privacy is something i respect, so please, any issues feel free to contact me !
 <br><br><br>
