--- a/fashion.html
+++ b/fashion.html
@@ -613,6 +613,9 @@ p { margin: 0; }
 <img width="300px" height="auto" src="https://i.imgur.com/jPxxXZa.png"/><br><br>
 <br>
 
+<img width="300px" height="auto" src="https://i.imgur.com/y6DLfiR.jpg"/><br><br>
+<br>
+
 <img width="300px" height="auto" src="https://i.imgur.com/EuFL4U9.jpg"/><br><br>
 <br>
 
