--- a/fashion.html
+++ b/fashion.html
@@ -591,11 +591,9 @@ p { margin: 0; }
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
 <br><br>
+<br>
 
-<font color="#bca6a0">( those photos are timeless )</font><br><br>
-<br><br>
-
-<img width="300px" height="auto" src="https://i.imgur.com/XibVxMw.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/o0PDmBe.jpg"/><br><br>
 <br>
 
 <img width="300px" height="auto" src="https://i.imgur.com/B8so2rD.jpg"/><br><br>
@@ -641,6 +639,9 @@ p { margin: 0; }
 <br>
 
 <img width="300px" height="auto" src="https://i.imgur.com/Y5IXQCm.png"/><br><br>
+<br>
+
+<img width="300px" height="auto" src="https://i.imgur.com/XibVxMw.jpg"/><br><br>
 <br>
 
 <img width="300px" height="auto" src="https://i.imgur.com/tq6Y3Vl.png"/><br><br>
