--- a/status.html
+++ b/status.html
@@ -445,28 +445,30 @@ z-index: 3;
 <img src="https://i.imgur.com/K7z9mQr.png">
 </div>
 
-<div style="font-family: Verdana; font-size:8px; overflow-y: hidden; position: absolute; width: 150px;height: 80px;overflow-x: hidden; padding-top: 63px; padding-left: 275px; z-index: 20;"><br><br>
-
+<div style="font-family: Verdana; line-height: 5px; font-size:8px; overflow-y: hidden; position: absolute; width: 150px;height: 80px;overflow-x: hidden; padding-top: 63px; padding-left: 275px; z-index: 20;"><br><br>
+<br><br><br>
 <img src="https://i.imgur.com/OJC3mkF.gif">　<img src="https://i.imgur.com/WAokv11.gif">　<img src="https://i.imgur.com/OJC3mkF.gif">
 <br>
-<sub>　　　{ status }</sub>
-<br><br>
 </div>
 
 
 
-<div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px;height: 100px;overflow-x: hidden; padding-left: 165px; padding-top: 248px; z-index: 20; line-height:8px;"><br><br>
+<div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px;height: 100px;overflow-x: hidden; padding-left: 165px; padding-top: 242px; z-index: 20; line-height:8px;"><br><br>
 <br>　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">excited</font>‌ ‌ ‌<sub><sub><img src="https://i.imgur.com/kK9iEgG.gif"></sub></sub>
 <br><br>
 　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:8px;">working on</font> : <font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">game design</font><br><br>
 　　　　‌‌　‌‌　 ‌‌<font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">graphic editing</font><br><br>
+　　　　‌‌　‌‌　 ‌‌<font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">web design</font><br><br>
 </div>
 
 
 
-<div style="padding-left: 163px; padding-top: 130px;">
-<div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; overflow: auto; overflow: scroll; z-index: 30; text-align:justify; line-height: 100%">
+<div style="padding-left: 165px; padding-top: 120px;">
+<div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 260px; height: 130px; overflow-x: hidden; overflow: auto; overflow: scroll; z-index: 30; text-align:justify; line-height: 8px;">
 
+　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>05.06.21</sup></font> <font color="#bea5ce">→</font>　proud of my progress  ༘♡
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>18.04.21</sup></font> <font color="#c48d8d">→</font>　working on dreams
 
 <br><br><br>
@@ -492,10 +494,7 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/YQRQHJd.gif"></sub> <font color="#f2c6c6" style="border-bottom:1px dashed #d8c0ad;"><sup>06.08.20</sup></font> <font color="#d8abab">→</font>　one step at a time
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>24.07.20</sup></font> <font color="#bea5ce">→</font>　a pure heart  ༘♡
-
+<br><br>
 
 
 </div>
