--- a/poofties.html
+++ b/poofties.html
@@ -32,17 +32,21 @@
 <meta name="title" content="ഒ">
 <meta name="description" content="꒰ 𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑑𝑖𝑎𝑟𝑦 ꒱">
 <meta name="theme-color" content="#f7e9ed">
-<meta property="og:url" content="https://middlepot.com/poofties">
+<meta property="og:url" content="https://middlepot.com">
 <meta property="og:title" content="ഒ">
 <meta property="og:description" content="꒰ 𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑑𝑖𝑎𝑟𝑦 ꒱">
 <meta property="og:image" content="https://middlepot.com/img/pure.jpg">
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:type" content="website">
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://middlepot.com/poofties">
+<meta property="twitter:url" content="https://middlepot.com">
 <meta property="twitter:title" content="ഒ">
 <meta property="twitter:description" content="꒰ 𝑚𝑖𝑑𝑑𝑙𝑒𝑝𝑜𝑡'𝑠 𝑑𝑖𝑎𝑟𝑦 ꒱">
 <meta property="twitter:image" content="https://middlepot.com/img/pure.jpg">
+
+<script language= "JavaScript">
+location.href="https://poofties.middlepot.com"
+</script>
 
 <style>
 body{ 
@@ -55,11 +59,13 @@ a:hover {cursor: url(https://i.imgur.com/EZZ5Vol.png), progress;
 }
 }
 </style>
+<script src="https://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
 <style type="text/css">
 ::-webkit-scrollbar {
 width: 4px;
 height: 4px;
-background: transparent;
+background: #FFF9F9;
 }
 ::-webkit-scrollbar-thumb {
 background-color: #f9f0ed;
@@ -68,128 +74,17 @@ border: 1px dotted #e2d5d0;
 }
 #linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
 #linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-#linkzinhoo { padding-bottom: 2px; border-bottom:1px dotted #e8c1c5; }</style>
+
+</style>
 
 <!--
 tooooooooltip
 -->
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 
-<script>
-(function($){
-	var methods={
-		init:function(options){
-			var defaults={ 
-				tip_follows_cursor:false, //tooltip follows cursor: boolean
-				tip_delay_time:700, //tooltip delay before displaying: milliseconds
-				tip_fade_speed:300, //tooltip fade in/out speed: milliseconds
-				attribute:"title" //tooltip text come from this attribute
-			},
-			options=$.extend(defaults,options);
-			if($("#s-m-t-tooltip").length===0){
-				$("body").append("<div id='s-m-t-tooltip'><div></div></div>");
-			}
-			var smtTooltip=$("#s-m-t-tooltip"); 
-			smtTooltip.css({"position":"absolute","display":"none"}).data("smt-z-index",smtTooltip.css("z-index")).children("div").css({"width":"100%","height":"100%"});
-			function smtGetCursorCoords(event){
-				var smtCursorCoordsX=event.pageX,
-					smtCursorCoordsY=event.pageY;
-				smtTooltip.style_my_tooltips("position",{
-					smtCursorCoordsX:smtCursorCoordsX,
-					smtCursorCoordsY:smtCursorCoordsY
-				});
-			}
-			$(".smt-current-element").live("mouseout mousedown click",function(){
-				var $this=$(this);
-				clearTimeout(smtTooltip_delay);
-				smtTooltip.style_my_tooltips("hide",{
-					speed:$this.data("smt-fade-speed")
-				});
-				$(document).unbind("mousemove");
-				$this.removeClass("smt-current-element");
-				if($this.attr(options.attribute)===""){
-					$this.attr(options.attribute,$this.data("smt-title"));
-				}
-			});
-			return this["live"]("mouseover",function(event){
-				var $this=$(this),
-					title=$this.attr(options.attribute);
-				$this.addClass("smt-current-element").data({"smt-title":title,"smt-fade-speed":options.tip_fade_speed}).attr(options.attribute,"");
-				smtTooltip.style_my_tooltips("update",{
-					title:title,
-					speed:options.tip_fade_speed,
-					delay:options.tip_delay_time,
-					tip_follows_cursor:options.tip_follows_cursor
-				});
-				$(document).bind("mousemove", function(event){
-					smtGetCursorCoords(event); 
-				});
-			});
-		},
-		update:function(options){
-			var $this=$(this);
-			$this.stop().css({"display":"none","z-index":$this.data("smt-z-index")}).children("div").text(options.title);
-			smtTooltip_delay=setTimeout(function(){
-				$this.style_my_tooltips("show",{
-					speed:options.speed,
-					tip_follows_cursor:options.tip_follows_cursor
-				})
-			}, options.delay);
-		},
-		show:function(options){
-			var $this=$(this);
-			$this.stop().fadeTo(options.speed,1);
-			if(!options.tip_follows_cursor){
-				$(document).unbind("mousemove");
-			}
-		},
-		hide:function(options){
-			var $this=$(this);
-			$this.stop().fadeTo(options.speed,0,function(){
-				$this.css({"z-index":"-1"});
-			});
-		},
-		position:function(options){
-			var $this=$(this),
-				winScrollX=$(window).scrollLeft(),
-				winScrollY=$(window).scrollTop(),
-				tipWidth=$this.outerWidth(true),
-				tipHeight=$this.outerHeight(true),
-				leftOffset=(options.smtCursorCoordsX+tipWidth)-winScrollX,
-				topOffset=(options.smtCursorCoordsY+tipHeight)-winScrollY;
-			if(leftOffset<=$(window).width() && leftOffset<=$(document).width()){
-				$this.css("left",options.smtCursorCoordsX);
-			}else{
-				var thePosX=options.smtCursorCoordsX-tipWidth;
-				if(thePosX>=winScrollX){
-					$this.css("left",thePosX);
-				}else{
-					$this.css("left",winScrollX);
-				}
-			}
-			if(topOffset<=$(window).height() && topOffset<=$(document).height()){
-				$this.css("top",options.smtCursorCoordsY);
-			}else{
-				var thePosY=options.smtCursorCoordsY-tipHeight;
-				if(thePosY>=winScrollY){
-					$this.css("top",thePosY);
-				}else{
-					$this.css("top",winScrollY);
-				}
-			}
-		}
-	}
-	$.fn.style_my_tooltips=function(method){
-		if(methods[method]){
-			return methods[method].apply(this,Array.prototype.slice.call(arguments,1));
-		}else if(typeof method==="object" || !method){
-			return methods.init.apply(this,arguments);
-		}else{
-			$.error("Method "+method+" does not exist");
-		}
-	};
-})(jQuery);  
-</script>
+<script src="https://static.tumblr.com/iuw14ew/VSQma1786/jquery.style-my-tooltips.js"></script>
+
 <script>
 
 (function($){
@@ -326,12 +221,9 @@ menuuuuuuuuuuuuuuu
 
 </head>
 
+
 <body ondragstart="return false" style="background-image:url(https://i.imgur.com/s0V8ydU.png); background-repeat: no-repeat; background-size: cover; background-color:#fefbfb; font-family: Verdana; font-size: 10px;">
 <style>
-html {
-    -webkit-text-size-adjust: 100%;
-    text-size-adjust: 100%;
-}
 #base {
 position: absolute;
 	left: 13%;
@@ -387,24 +279,8 @@ height: 100px;
 overflow-x:hidden;
 z-index: 3;
  }
-@media screen and (max-width: 1000px) and (orientation: portrait){
-#everything { position: absolute; zoom: 155%;
-	left:570px;
-	top:80px;
-    -webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    transform: rotate(90deg); }
-#stuff { overflow: auto; overflow: scroll; }
-}
-@media screen and (max-width: 1000px) and (orientation: landscape){
-#everything { position: absolute; zoom: 100%; left:20px; top:10px;}
-#stuff { overflow: auto; overflow: scroll; }
-}
 </style>
 
-<div id="everything">
 <div id="base">
 
 <div id="aaa">
@@ -438,190 +314,17 @@ z-index: 3;
 
 <div id="stuff">
 
-<audio id="musict" preload="true">
-  <source src="https://file.pooftie.me/a/heartsng1.mp3" type="audio/mpeg">
-</audio>
-<div id="audioplayer">
- <button id="pButton" class="play"></button>
-  <div id="timeline">    
-      <div id="playhead"></div>
-  </div>
-</div>
-
-
-
-<style>
-#pButton{
-    height:20px; 
-    width: 20px;
-    border: none;
-    background-repeat: no-repeat;
-    outline:none;
-    cursor: url(https://i.imgur.com/EZZ5Vol.png), progress;
-}
-
-.play{background: url('https://i.imgur.com/aRUFUyE.gif') ;}
-.pause{background: url('https://i.imgur.com/aRUFUyE.gif') ;}
-</style>
-
-
-
-
-
-
-<script>
-var music = document.getElementById('musict');
-var duration = music.duration;
-var pButton = document.getElementById('pButton');
-var playhead = document.getElementById('playhead');
-var timeline = document.getElementById('timeline');
-
-var timelineWidth = timeline.offsetWidth - playhead.offsetWidth;
-
-pButton.addEventListener("click", play);
-
-music.addEventListener("timeupdate", timeUpdate, false);
-
-timeline.addEventListener("click", function(event) {
-    moveplayhead(event);
-    music.currentTime = duration * clickPercent(event);
-}, false);
-
-function clickPercent(event) {
-    return (event.clientX - getPosition(timeline)) / timelineWidth;
-}
-
-playhead.addEventListener('mousedown', mouseDown, false);
-window.addEventListener('mouseup', mouseUp, false);
-
-
-var onplayhead = false;
-
-function mouseDown() {
-    onplayhead = true;
-    window.addEventListener('mousemove', moveplayhead, true);
-    music.removeEventListener('timeupdate', timeUpdate, false);
-}
-
-function mouseUp(event) {
-    if (onplayhead == true) {
-        moveplayhead(event);
-        window.removeEventListener('mousemove', moveplayhead, true);
-        music.currentTime = duration * clickPercent(event);
-        music.addEventListener('timeupdate', timeUpdate, false);
-    }
-    onplayhead = false;
-}
-function moveplayhead(event) {
-    var newMargLeft = event.clientX - getPosition(timeline);
-
-    if (newMargLeft >= 0 && newMargLeft <= timelineWidth) {
-        playhead.style.marginLeft = newMargLeft + "px";
-    }
-    if (newMargLeft < 0) {
-        playhead.style.marginLeft = "0px";
-    }
-    if (newMargLeft > timelineWidth) {
-        playhead.style.marginLeft = timelineWidth + "px";
-    }
-}
-
-function timeUpdate() {
-    var playPercent = timelineWidth * (music.currentTime / duration);
-    playhead.style.marginLeft = playPercent + "px";
-    if (music.currentTime == duration) {
-        pButton.className = "";
-        pButton.className = "play";
-    }
-}
-
-function play() {
-    if (music.paused) {
-        music.play();
-        pButton.className = "";
-        pButton.className = "pause";
-    } else { 
-        music.pause();
-        pButton.className = "";
-        pButton.className = "play";
-    }
-}
-
-music.addEventListener("canplaythrough", function() {
-    duration = music.duration;
-}, false);
-
-function getPosition(el) {
-    return el.getBoundingClientRect().left;
-}
-</script>
-
-<div style="position:absolute; left:10%; right:10%; line-height: 12px;">
 <center>
-<sub><sub><img width="auto" height="20px" src="https://i.imgur.com/xwtqxd7.png"/></sub></sub> <font color="#b39a9c">poofties</font> <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/k7cuboS.png"/></sub></sub>
-<br>
-<font color="#cfb6b8">꒰ ﾌﾟﾌﾁ ꒱</font><br>
-<img width="auto" height="25px" src="https://i.imgur.com/jqGBSbi.png"/>
+<br><br><br><br><br><br><br><br><br><br><br><br>
+
+<font color="#a59090">redirecting .. !</font>
 <br><br>
-<font style="font-size: 8px;" color="#bcabab">
-welcome to my imagination. poofties are all the critters that i've created, poofti is the world where they live in.<br>
-in this world i received the "middlepot" (sur)name, but i'm usually called "puf" by them.<br>
-<br>
-in this page you can ..<br><br></font>
+<img src="https://i.imgur.com/WMKsOT0.gif"/>
 
-<sub><sub><sub><img width="auto" height="23px" src="https://i.imgur.com/FcP2tbk.png"/></sub></sub></sub> ‌ ‌ <a href="/milkywoods" id="linkbjinho" style="text-decoration: none;"><font color="#c9abb0">play little games</a></font><br><br>
-<a href="/stories" id="linkbjinho" style="text-decoration: none;"><font color="#cfb4b8">watch the episodes</font></a> ‌ ‌ <sub><sub><sub><img width="auto" height="23px" src="https://i.imgur.com/GoorTKV.png"/></sub></sub></sub><br><br>
-<sub><sub><sub><img width="auto" height="23px" src="https://i.imgur.com/pCAcKbw.png"/></sub></sub></sub> ‌ <a href="/notes" id="linkbjinho" style="text-decoration: none;"><font color="#c9abb0">read potato's notes</font></a><br><br>
-<a href="/tinyjournal" id="linkbjinho" style="text-decoration: none;"><font color="#cfb4b8">read random texts</a></font> ‌ ‌<sub><sub><sub><img width="auto" height="23px" src="https://i.imgur.com/zrlm8Ti.png"/></sub></sub></sub><br>
-
-<br><br><br>
-
-<font style="font-size:9px" color="#d6c1c4">︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶</font><br><br>
-<br>
 </center>
-<center>
-<sub><sub><img width="auto" height="20px" src="https://i.imgur.com/kWo8Rw2.png"/></sub></sub> <font color="#af9595">backstory</font> <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/jjOLvRo.png"/></sub></sub>
-</center><br><br>
-<font style="font-size: 8px;" color="#bf999e">
-
-the whole story begins in a small planet which name is unknown. in this world, everything is made of food. not like our planet earth where all the things are edible but not very tasty, things are reeeally edible in this planet.<br>
-there are three kingdoms above the ground and one kingdom below.<br>
-the kingdom of the potatoes, beets and carrots are above ground.<br>
-the kingdom of the kiwis is below the ground, but nobody up there knows about it. for now.<br>
-potatoes are very silly and clumsy, while the beets are serious and like everything in its place. carrots are very annoying and like to make jokes about everything. the three kingdoms lived in peace, and the carrot kingdom, very small, had alliance with the two largest kingdoms.<br>
-one day, a little potato noticed that the beets were very boring. no one had ever thought about it before, but they are actually very boring. then the potato said "hey, stop being so boring !" and then the beet got very angry and told everybody that potatoes were being disrespectful. they wrote a great letter to the king potato, asking potatoes to apologize for their rude words. the king potato understood nothing and sent a letter back saying "what ?".<br>
-at that time, the beets declared war. carrots allied to potatoes, because they also agreed that the beets were boring and dull. it was a violent war that lasted many years. carrots never helped and were just leaving everything worse because they liked fights, so the smart elderly potatoes agreed not allow carrots to help in the war.<br>
-carrots were very angry because they wanted to attack everyone and were being ignored. then they decided that they would attack the two kingdoms. they lost for obvious reasons.<br>
-potatoes and beets then realized they had sided against the carrots, then made peace. they living together was not that bad.<br>
-"by the way, what was the reason for the war ?" said the king potato.<br>
-carrots were very angry. they were humiliated. nobody cared for them.<br>
-in revenge, carrots decided to spread lies around, saying that the potatoes were loved throughout the galaxy and the beets were hated. they wanted to cause envy in beets. they were very sensitive, were saddened but didn't want to believe.<br>
-one day came a real news space. at some distant world, potatoes were loved by everyone, they were a favorite food, while the beets were hated !<br>
-the beets were very sad and angry. they thought the potatoes were spreading things around them, and that's why no one liked them. they were jealous of potatoes, jealousy was so big that they declared war again.<br>
-"what's going on ?" said the king potato.<br>
-this small little planet is at war until the present day.<br>
-but there were two different creatures.<br>
-a potato and beet were best friends. otherwise the majority, the potato was very intelligent, while the beet was clumsy and silly. they thought all these wars were nonsense, then planned for years to leave that planet and go to a better world without silly wars.<br>
-after a long time building a rocket made of broccoli and cauliflower, they took off from that planet and got into space. soon they saw another planet, much larger than that. it looked so beautiful and happy. they decided that this would be their new home.<br>
-out of nowhere, a small pink spaceship appears and hit the vegetable rocket. they fell on that planet too hard !!<br>
-their rocket smashed, a lot of little strange creatures came to look the pink spaceship and what was coming out of it, not understanding what were those vegetable pieces thrown around.<br>
-the potato and the beet opened their eyes and were troubled. what were those creatures ? why the clouds were whispering ? it was all so different from their world. it was very curious. but it was beautiful ! it was a beautiful planet full of colors where everything seemed joyful. they were happy to be there.<br>
-then they tried to talk to the creatures, but they didn't see them. nor listened. what happened ?<br>
-the potato got angry and kicked a piece of broccoli aside. then a little girl with a very big head screamed and said "i saw that thing moving !!"<br>
-oh no ! it could only mean one thing : they were dead. the fall on that planet was too strong and their vegetable little bodies couldn't endure. they were ghosts now.<br>
-but that doesn't make them so sad. they had each other, and could now observe everything that happened in that funny place, they could show signs that exist. these small signs gave chance for the new planet creatures know they were being constantly watched and they began to refer to potatoes and beets as deities.<br>
-fun things and tragic things happen every day in this world. in that cruel, but so funny world.
-<br><br></font>
-<font color="#af9595">
-<center>the end</center>
-</font><br><br><br>
-
-</div>
 </div>
 </div>
 
-
-</div>
 
 </body>
 
