--- a/milkywoods.html
+++ b/milkywoods.html
@@ -298,7 +298,7 @@ z-index: 3;
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
 </p>
 <br><br><br><br><br><br><br><br><br><br><br><br><br>
-　　　　　　<a href="/poofties" style="text-decoration: none; color:#8c7d75;">poofties</a>
+　　　　　　<a href="https://poofties.middlepot.com" target="_blank" style="text-decoration: none; color:#8c7d75;">poofties</a>
 </div>
 
 <div id="menu2">
