--- a/faq.html
+++ b/faq.html
@@ -590,11 +590,11 @@ it is possible to be pure, innocent, happy and comfy even as an adult.. and i'm 
 <br>
 <br>
 <br><br>
-now, about agє play, ddℓg / cgℓ .. there is a fine line between pedσphilia and those kιnks. how to identify dangerous situations, dangerous people, what's the limit ?<br>
+now, about agє play, dd|g / cg| .. there is a fine line between pedσphilia and those kιnks. how to identify dangerous situations, dangerous people, what's the limit ?<br>
 i think the sєx life between two adults, responsible for themselves, with consent, is something that allows things like kιnks or lifestyles such as bdsм. any sub/dσm relationship, have no relation whatsoever to incest or pedσphilia. is something consented between two adults. anyway, it's a kιnk. in my opinion, kιnks should in no way be publicly exposed, on the streets or on the internet, where children can see and be influenced. children can't have contact with these kind of things because it wouldn't be healthy.<br>
-this unfortunately is something that has happened very often, and even worse, added to agє play : ddℓg / cgℓ has reached many minors and many adult pedσphiles have had contact with these children through kιnk communities.<br>
-these communities have become increasingly dangerous for minors, through the romanticization of pedσphilia, child abusє and contact with kιnks linked to childhood. even people who claim to be in a sfw ddℓg / cgℓ community are not safe and are exposed to dangerous people as they use kιnk tags.<br>
-communities of age regression that work hard to be a truly safe environment for people who don't use the agere as something sєxual, are  anti ddℓg. many people have gone against this kιnk, because of exposure to minors. it has become something horrible and manipulative.<br>
+this unfortunately is something that has happened very often, and even worse, added to agє play : dd|g / cg| has reached many minors and many adult pedσphiles have had contact with these children through kιnk communities.<br>
+these communities have become increasingly dangerous for minors, through the romanticization of pedσphilia, child abusє and contact with kιnks linked to childhood. even people who claim to be in a sfw dd|g / cg| community are not safe and are exposed to dangerous people as they use kιnk tags.<br>
+communities of age regression that work hard to be a truly safe environment for people who don't use the agere as something sєxual, are  anti dd|g. many people have gone against this kιnk, because of exposure to minors. it has become something horrible and manipulative.<br>
 <br>
 i agree that it is really very dangerous to associate childhood with sєxuality, even if those involved are adults, and i firmly believe that kιnks shouldn't be publicly exposed for children to see. neither of them.<br>
 the only way to keep a kιnk safe and not harmful to anyone is without public exposure.<br>
