--- a/archive.html
+++ b/archive.html
@@ -6028,11 +6028,11 @@ do i age regress ? am i part of a community ? am i in a relationship with a "car
 　ణ　i recently realized.. i am a platonic caregiver ! i love taking care of others, but it's not in a romantic way.. so it's different from what bubu is for me. i also don't enter any kind of "mind space" in this case !<br>
 <br>
 <br><br>
-now, about agє play, dd|g / cg| .. there is a fine line between pedσphilia and those kιnks. how to identify dangerous situations, dangerous people, what's the limit ?<br>
+now, about agє play, ddIg / cgI .. there is a fine line between pedσphilia and those kιnks. how to identify dangerous situations, dangerous people, what's the limit ?<br>
 i think the sєx life between two adults, responsible for themselves, with consent, is something that allows things like kιnks or lifestyles such as bdsм. any sub/dσm relationship, have no relation whatsoever to incest or pedσphilia. is something consented between two adults. anyway, it's a kιnk. in my opinion, kιnks should in no way be publicly exposed, on the streets or on the internet, where children can see and be influenced. children can't have contact with these kind of things because it wouldn't be healthy.<br>
-this unfortunately is something that has happened very often, and even worse, added to agє play : dd|g / cg| has reached many minors and many adult pedσphiles have had contact with these children through kιnk communities.<br>
-these communities have become increasingly dangerous for minors, through the romanticization of pedσphilia, child abusє and contact with kιnks linked to childhood. even people who claim to be in a sfw dd|g / cg| community are not safe and are exposed to dangerous people as they use kιnk tags.<br>
-communities of age regression that work hard to be a truly safe environment for people who don't use the agere as something sєxual, are  anti dd|g. many people have gone against this kιnk, because of exposure to minors. it has become something horrible and manipulative.<br>
+this unfortunately is something that has happened very often, and even worse, added to agє play : ddIg / cgI has reached many minors and many adult pedσphiles have had contact with these children through kιnk communities.<br>
+these communities have become increasingly dangerous for minors, through the romanticization of pedσphilia, child abusє and contact with kιnks linked to childhood. even people who claim to be in a sfw ddIg / cgI community are not safe and are exposed to dangerous people as they use kιnk tags.<br>
+communities of age regression that work hard to be a truly safe environment for people who don't use the agere as something sєxual, are  anti ddIg. many people have gone against this kιnk, because of exposure to minors. it has become something horrible and manipulative.<br>
 <br>
 i agree that it is really very dangerous to associate childhood with sєxuality, even if those involved are adults, and i firmly believe that kιnks shouldn't be publicly exposed for children to see. neither of them.<br>
 the only way to keep a kιnk safe and not harmful to anyone is without public exposure.<br>
@@ -6336,7 +6336,7 @@ now, the word nymρh, which is the abbreviation for nymρhet :<br>
 <br><br>
 so, as you can see, those words can be used without sєxual connotation, but because of the other meanings, they become rather dangerous words. it is not safe to use them as tags for example, as they may attract bad people. you must be careful when using these terms, but it is possible, and it is not wrong. please, be careful ! <img src="https://i.imgur.com/oGcmE1L.gif"/><br><br>
 and as you already must be thinking, yes, there are some similar stuff and related subjects that i will talk about in future posts, because they are also very important :<br>
-　dd|g, agє play & age regression ;<br>
+　ddIg, agє play & age regression ;<br>
 　self-diagnostic & trauma blogs ...<br><br>
 ( don't worry, i'm not going to be mean to anyone here, these are just interesting topics to talk about )
 <br><br>
