--- a/recommended.html
+++ b/recommended.html
@@ -502,7 +502,7 @@ z-index: 3;
 
 　<br><br><a href="http://whimsical.heartette.net/" target="_blank"><img src="https://i.imgur.com/Szmjm6A.gif"></a>
 　<a href="http://web.archive.org/web/20190913175901/https://bunnymilku.blogspot.com/" target="_blank"><img src="https://i.imgur.com/ytdhHO6.gif"></a>
-　<a href="http://www.lovecandied.com/" target="_blank"><img src="https://i.imgur.com/hUQytvV.gif"></a>
+　<a href="https://web.archive.org/web/20090227235121/http://www.lovecandied.com/" target="_blank"><img src="https://i.imgur.com/hUQytvV.gif"></a>
 
 　<br><br><a href="http://bitmapdreams.lastsecret.net/" target="_blank"><img src="https://i.imgur.com/NrB9UB9.gif"></a>
 　<a href="http://www.asterism-m.com/" target="_blank"><img src="https://i.imgur.com/zulajRd.gif"></a>
@@ -510,7 +510,7 @@ z-index: 3;
 
 　<br><br><a href="https://web.archive.org/web/20130710021102/http://cherish.silk.to:80/" target="_blank"><img src="https://i.imgur.com/kft2rpL.gif"></a>
 　<a href="https://web.archive.org/web/20080501195432/http://sugarpink.girly.jp/pink.html" target="_blank"><img src="https://i.imgur.com/0Y4xXQR.gif"></a>
-　<a href="http://www.lovecandied.com/" target="_blank"><img src="https://i.imgur.com/R9En3MI.gif"></a>
+　<a href="https://web.archive.org/web/20080815120448/http://www.emirin.com/" target="_blank"><img src="https://i.imgur.com/R9En3MI.gif"></a>
 
 　<br><br><a href="https://web.archive.org/web/20110728110156/http://chu.itigo.jp/" target="_blank"><img src="https://i.imgur.com/65XWh6x.gif"></a>
 　<a href="http://sorahana.ciao.jp/" target="_blank"><img src="https://i.imgur.com/jokl3rn.gif"></a>
@@ -518,11 +518,11 @@ z-index: 3;
 
 　<br><br><a href="http://milky.geocities.jp/nyarose00/" target="_blank"><img src="https://i.imgur.com/zwZtYVy.gif"></a>
 　<a href="http://lame.xii.jp/lame/" target="_blank"><img src="https://i.imgur.com/zR8VqMT.png"></a>
-　<a href="https://web.archive.org/web/20100418035935/http://drikoti.net:80/" target="_blank"><img src="https://i.imgur.com/Z2vfmvm.gif"></a>
+　<a href="https://web.archive.org/web/20080815042056/http://cherish.silk.to/" target="_blank"><img src="https://i.imgur.com/Z2vfmvm.gif"></a>
 
 　<br><br><a href="https://web.archive.org/web/20111101151554/http://www.mirukuma.com/" target="_blank"><img src="https://i.imgur.com/8jgus9J.gif"></a>
 　　<a href="http://engrampixel.co.vu/" target="_blank"><img src="https://i.imgur.com/eMOOTfI.gif"></a>
-　　<a href="http://www.emirin.com/" target="_blank"><img src="https://i.imgur.com/9jcAUVv.gif"></a>
+　　<a href="https://web.archive.org/web/20160616220750/http://www.emirin.com/" target="_blank"><img src="https://i.imgur.com/9jcAUVv.gif"></a>
 
 　<br><br><a href="https://web.archive.org/web/20110728061529/http://susuda.skr.jp/" target="_blank"><img src="https://i.imgur.com/9EvtDb7.gif"></a>
 　<a href="http://nyokiope.com/" target="_blank"><img src="https://i.imgur.com/CJHMori.gif"></a>
